[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
mysql = "23.0.1"
log = "0.4.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = {version = "1.0.152",features = ["derive"]}
serde_json = "1.0.91"
derive_more = "0.99.17"